@@ -10,11 +10,11 @@ include ../../build/library.make
 
 all-local: Mono.Posix/make-map.exe 
 
-Mono.Posix/make-map.exe: Mono.Posix/make-map.cs ../lib/Mono.Posix.dll
-	cp ../lib/Mono.Posix.dll Mono.Posix/
+Mono.Posix/make-map.exe: Mono.Posix/make-map.cs ../lib/$(PROFILE)/Mono.Posix.dll
+	cp ../lib/$(PROFILE)/Mono.Posix.dll Mono.Posix/
 ifneq ($(PLATFORM),win32)
-	$(CSCOMPILE)  -out:Mono.Posix/make-map.exe -r:../lib/Mono.Posix.dll Mono.Posix/make-map.cs
+	$(CSCOMPILE)  -out:Mono.Posix/make-map.exe -r:Mono.Posix.dll Mono.Posix/make-map.cs
 else
-	$(CSCOMPILE)  -out:Mono.Posix/make-map.exe -r:../lib/Mono.Posix.dll Mono.Posix\\make-map.cs
+	$(CSCOMPILE)  -out:Mono.Posix/make-map.exe -r:Mono.Posix.dll Mono.Posix\\make-map.cs
 endif
 
