@@ -1,3 +1,8 @@
+2004-04-26  Jackson Harper  <jackson@ximian.com>
+
+	* Makefile: Dont use explicit lib references so the proper lib
+	directory is used. Output to profile directory.
+	
 2004-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* Makefile: handle win32 paths and copy Mono.Posix.dll to Mono.Posix
